base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-core
  label:
    app: frontend-core
spec:
  selector:
    matchLabels:
      app: frontend-core
  template:
    metadata:
      labels:
        app: frontend-core
    spec:
      containers:
      - name: core
        image: <image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 80
