base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-core
spec:
  selector:
    app: frontend-core
  ports:
  - port: 80
    targetPort: 80
