base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-core
spec:
  rules:
  - host: core.choilab.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-core
            port:
              number: 80
